--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "tsubasanote",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "react-router-dom": "^4.3.1"
+  }
 }
